--- a/opengl_cube/opengl_cube.vcxproj.filters
+++ b/opengl_cube/opengl_cube.vcxproj.filters
@@ -46,5 +46,8 @@
     <None Include="shaders\vert.glsl">
       <Filter>Resource Files\shaders</Filter>
     </None>
+    <None Include="..\.gitattributes" />
+    <None Include="..\.gitignore" />
+    <None Include="..\README.md" />
   </ItemGroup>
 </Project>
